--- a/app/src/main/res/layout/rv_tabla.xml
+++ b/app/src/main/res/layout/rv_tabla.xml
@@ -1,26 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/id"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:background="@drawable/black"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:gravity="center"
+        android:background="@drawable/black"
         android:id="@+id/tvZona"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:background="@drawable/black"
         android:id="@+id/tvHatos"
-        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:background="@drawable/black"
         android:id="@+id/tvFecha"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:gravity="center"
+        android:layout_weight="1"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
